// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogToggle /> Renders a LogToggle (Not loggedIn) 1`] = `
<a
  className="LogToggle__LT-bRttfU hgLLdv"
  onClick={[Function]}
>
  Log In
</a>
`;

exports[`<LogToggle /> Renders a LogToggle (loggedIn) 1`] = `
<a
  className="LogToggle__LT-bRttfU hgLLdv"
  onClick={[Function]}
>
  Log Out
</a>
`;
